src/golden/cards/templates/bindings/errors/test.golden/needhandlers.fl
	card BindingsNeedHandlers
		template label
			styleme
				=> needToDefineThis